--- a/theme/style.css
+++ b/theme/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /*!
 Theme Name: swistak-kurs
@@ -91,7 +91,7 @@ html,
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: Signika, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Poppins, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -616,7 +616,7 @@ video {
 body{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  font-family: Signika, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Poppins, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --tw-text-opacity: 1;
   color: rgb(22 22 22 / var(--tw-text-opacity));
 }
@@ -654,18 +654,32 @@ body{
 @media (min-width: 1024px){
   .container{
     max-width: 1024px;
+    padding-right: 2rem;
+    padding-left: 2rem;
   }
 }
 
 @media (min-width: 1280px){
   .container{
     max-width: 1280px;
+    padding-right: 4rem;
+    padding-left: 4rem;
   }
 }
 
 @media (min-width: 1536px){
   .container{
     max-width: 1536px;
+    padding-right: 6rem;
+    padding-left: 6rem;
+  }
+}
+
+@media (min-width: 1920px){
+  .container{
+    max-width: 1920px;
+    padding-right: 10rem;
+    padding-left: 10rem;
   }
 }
 
@@ -1378,6 +1392,45 @@ html{
   opacity: 1;
 }
 
+.ks-decoration__line {
+  background: #00b3a7;
+  transform-origin: 50%;
+  display: inline-block;
+}
+
+.ks-decoration__line--small {
+  margin-right: -11px;
+  height: 4px;
+  width: 14px;
+}
+
+.ks-decoration__line--big {
+  margin-right: -9px;
+  height: 6px;
+  width: 21px;
+}
+
+.ks-decoration__wave {
+  position: absolute;
+}
+
+.ks-decoration__wave--small {
+  bottom: -30px;
+}
+
+.ks-decoration__wave--big {
+  bottom: -20px;
+}
+
+.ks-decoration--left .ks-decoration__wave--big {
+  left: 0;
+}
+
+.ks-decoration--center .ks-decoration__wave--small {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 /**
  * This injects Tailwind's utility classes and any utility classes registered
  * by plugins, then adds custom utility classes.
@@ -1411,10 +1464,6 @@ html{
   position: sticky;
 }
 
-.inset-0{
-  inset: 0px;
-}
-
 .inset-x-0{
   left: 0px;
   right: 0px;
@@ -1436,14 +1485,6 @@ html{
   top: 100%;
 }
 
-.-z-10{
-  z-index: -10;
-}
-
-.z-0{
-  z-index: 0;
-}
-
 .z-10{
   z-index: 10;
 }
@@ -1462,8 +1503,9 @@ html{
   margin-bottom: 2.5rem;
 }
 
-.-mt-6{
-  margin-top: -1.5rem;
+.my-20{
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .mb-10{
@@ -1518,6 +1560,10 @@ html{
   display: flex;
 }
 
+.table{
+  display: table;
+}
+
 .hidden{
   display: none;
 }
@@ -1526,8 +1572,8 @@ html{
   height: 0px;
 }
 
-.h-\[300px\]{
-  height: 300px;
+.h-\[250px\]{
+  height: 250px;
 }
 
 .h-\[31px\]{
@@ -1550,6 +1596,10 @@ html{
   height: auto;
 }
 
+.w-\[250px\]{
+  width: 250px;
+}
+
 .w-\[35px\]{
   width: 35px;
 }
@@ -1567,6 +1617,14 @@ html{
   width: 100%;
 }
 
+.max-w-\[1024px\]{
+  max-width: 1024px;
+}
+
+.max-w-\[1140px\]{
+  max-width: 1140px;
+}
+
 .max-w-\[150px\]{
   max-width: 150px;
 }
@@ -1577,10 +1635,6 @@ html{
 
 .max-w-\[700px\]{
   max-width: 700px;
-}
-
-.max-w-\[750px\]{
-  max-width: 750px;
 }
 
 .max-w-\[850px\]{
@@ -1644,15 +1698,7 @@ html{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.scale-\[1\.4\]{
-  --tw-scale-x: 1.4;
-  --tw-scale-y: 1.4;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-\[5\]{
-  --tw-scale-x: 5;
-  --tw-scale-y: 5;
+.transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1684,16 +1730,20 @@ html{
   gap: 2.5rem;
 }
 
-.gap-24{
-  gap: 6rem;
+.gap-12{
+  gap: 3rem;
 }
 
-.gap-28{
-  gap: 7rem;
+.gap-14{
+  gap: 3.5rem;
 }
 
 .gap-4{
   gap: 1rem;
+}
+
+.self-center{
+  align-self: center;
 }
 
 .overflow-hidden{
@@ -1755,6 +1805,11 @@ html{
   background-color: #00b3a71a;
 }
 
+.bg-\[\#F7F7F7\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+
 .bg-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(0 179 167 / var(--tw-bg-opacity));
@@ -1763,25 +1818,6 @@ html{
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
-}
-
-.bg-gradient-to-b{
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
-.from-primary\/60{
-  --tw-gradient-from: rgb(0 179 167 / 0.6) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 179 167 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-secondary\/80{
-  --tw-gradient-to: rgb(21 128 61 / 0.8) var(--tw-gradient-to-position);
 }
 
 .p-10{
@@ -1803,11 +1839,6 @@ html{
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
 .py-20{
@@ -1861,21 +1892,21 @@ html{
   line-height: 2.25rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-\[100px\]{
   font-size: 100px;
 }
 
-.text-\[34px\]{
-  font-size: 34px;
+.text-\[24px\]{
+  font-size: 24px;
 }
 
 .text-\[60px\]{
   font-size: 60px;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-lg{
@@ -1963,11 +1994,6 @@ html{
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.text-red-600{
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
-}
-
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1975,12 +2001,6 @@ html{
 
 .opacity-0{
   opacity: 0;
-}
-
-.shadow-\[12px_12px_0px_0px_rgba\(0\2c 179\2c 167\2c 0\.3\)\]{
-  --tw-shadow: 12px 12px 0px 0px rgba(0,179,167,0.3);
-  --tw-shadow-colored: 12px 12px 0px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-lg{
@@ -2065,18 +2085,86 @@ html{
   @media (min-width: 1024px){
     .md\:container{
       max-width: 1024px;
+      padding-right: 2rem;
+      padding-left: 2rem;
     }
   }
 
   @media (min-width: 1280px){
     .md\:container{
       max-width: 1280px;
+      padding-right: 4rem;
+      padding-left: 4rem;
     }
   }
 
   @media (min-width: 1536px){
     .md\:container{
       max-width: 1536px;
+      padding-right: 6rem;
+      padding-left: 6rem;
+    }
+  }
+
+  @media (min-width: 1920px){
+    .md\:container{
+      max-width: 1920px;
+      padding-right: 10rem;
+      padding-left: 10rem;
+    }
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:container{
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 1.25rem;
+    padding-left: 1.25rem;
+  }
+
+  @media (min-width: 640px){
+    .lg\:container{
+      max-width: 640px;
+    }
+  }
+
+  @media (min-width: 768px){
+    .lg\:container{
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 1024px){
+    .lg\:container{
+      max-width: 1024px;
+      padding-right: 2rem;
+      padding-left: 2rem;
+    }
+  }
+
+  @media (min-width: 1280px){
+    .lg\:container{
+      max-width: 1280px;
+      padding-right: 4rem;
+      padding-left: 4rem;
+    }
+  }
+
+  @media (min-width: 1536px){
+    .lg\:container{
+      max-width: 1536px;
+      padding-right: 6rem;
+      padding-left: 6rem;
+    }
+  }
+
+  @media (min-width: 1920px){
+    .lg\:container{
+      max-width: 1920px;
+      padding-right: 10rem;
+      padding-left: 10rem;
     }
   }
 }
@@ -2089,6 +2177,11 @@ html{
 .hover\:bg-\[\#008077\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(0 128 119 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:text-primary:hover{
@@ -2116,24 +2209,8 @@ html{
     position: static;
   }
 
-  .md\:top-24{
-    top: 6rem;
-  }
-
-  .md\:-mt-24{
-    margin-top: -6rem;
-  }
-
-  .md\:mb-12{
-    margin-bottom: 3rem;
-  }
-
   .md\:flex{
     display: flex;
-  }
-
-  .md\:grid{
-    display: grid;
   }
 
   .md\:hidden{
@@ -2152,14 +2229,8 @@ html{
     height: auto;
   }
 
-  .md\:scale-105{
-    --tw-scale-x: 1.05;
-    --tw-scale-y: 1.05;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .md\:w-auto{
+    width: auto;
   }
 
   .md\:flex-row{
@@ -2174,22 +2245,12 @@ html{
     gap: 2.5rem;
   }
 
-  .md\:border-\[2px\]{
-    border-width: 2px;
-  }
-
-  .md\:border-gray-300{
-    --tw-border-opacity: 1;
-    border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  .md\:gap-28{
+    gap: 7rem;
   }
 
   .md\:p-12{
     padding: 3rem;
-  }
-
-  .md\:px-0{
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   .md\:px-8{
@@ -2218,23 +2279,71 @@ html{
   .md\:opacity-100{
     opacity: 1;
   }
-
-  .md\:shadow-\[24px_24px_0px_0px_rgba\(0\2c 179\2c 167\2c 0\.3\)\]{
-    --tw-shadow: 24px 24px 0px 0px rgba(0,179,167,0.3);
-    --tw-shadow-colored: 24px 24px 0px 0px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
 }
 
 @media (min-width: 1024px){
+  .lg\:mb-20{
+    margin-bottom: 5rem;
+  }
+
+  .lg\:mt-52{
+    margin-top: 13rem;
+  }
+
+  .lg\:mt-\[-130px\]{
+    margin-top: -130px;
+  }
+
+  .lg\:grid{
+    display: grid;
+  }
+
+  .lg\:min-w-\[450px\]{
+    min-width: 450px;
+  }
+
+  .lg\:scale-\[1\.2\]{
+    --tw-scale-x: 1.2;
+    --tw-scale-y: 1.2;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:gap-10{
+    gap: 2.5rem;
+  }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-6xl{
     font-size: 3.75rem;
     line-height: 1;
   }
 }
 
+@media (min-width: 1280px){
+  .xl\:grid{
+    display: grid;
+  }
+}
+
 .\[\&\>\.question-container\]\:mb-4>.question-container{
   margin-bottom: 1rem;
+}
+
+.\[\&\>div\]\:bg-white>div{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .\[\&\>li\]\:mb-20>li{
@@ -2243,6 +2352,10 @@ html{
 
 .\[\&\>li\]\:mb-8>li{
   margin-bottom: 2rem;
+}
+
+.\[\&\>li\]\:last\:mb-0:last-child>li{
+  margin-bottom: 0px;
 }
 
 .\[\&\>p\]\:mb-5>p{
