--- a/theme/style.css
+++ b/theme/style.css
@@ -1653,16 +1653,8 @@ html{
   flex-basis: 50%;
 }
 
-.basis-1\/3{
-  flex-basis: 33.333333%;
-}
-
 .basis-1\/4{
   flex-basis: 25%;
-}
-
-.basis-2\/3{
-  flex-basis: 66.666667%;
 }
 
 .basis-3\/4{
@@ -1836,6 +1828,10 @@ html{
   padding: 1.5rem;
 }
 
+.p-8{
+  padding: 2rem;
+}
+
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -1916,6 +1912,20 @@ html{
 
 .text-xl{
   font-size: 1.375rem;
+}
+
+.text-\[20px\]{
+  font-size: 20px;
+}
+
+.\!text-lg{
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
+}
+
+.\!text-sm{
+  font-size: 0.875rem !important;
+  line-height: 1.25rem !important;
 }
 
 .font-bold{
@@ -2308,10 +2318,6 @@ html{
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .lg\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -2320,20 +2326,31 @@ html{
     gap: 2.5rem;
   }
 
+  .lg\:p-10{
+    padding: 2.5rem;
+  }
+
+  .lg\:p-6{
+    padding: 1.5rem;
+  }
+
   .lg\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .lg\:text-6xl{
     font-size: 3.75rem;
     line-height: 1;
   }
-}
 
-@media (min-width: 1280px){
-  .xl\:grid{
-    display: grid;
+  .lg\:text-xl{
+    font-size: 1.375rem;
   }
 }
 
@@ -2354,6 +2371,20 @@ html{
   margin-bottom: 2rem;
 }
 
+.\[\&\>li\]\:mb-3>li{
+  margin-bottom: 0.75rem;
+}
+
+.\[\&\>li\]\:text-lg>li{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.\[\&\>li\]\:\!text-lg>li{
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
+}
+
 .\[\&\>li\]\:last\:mb-0:last-child>li{
   margin-bottom: 0px;
 }
@@ -2369,4 +2400,20 @@ html{
 .\[\&\>p\]\:text-2xl>p{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.\[\&\>p\]\:text-lg>p{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+@media (min-width: 1024px){
+  .\[\&\>p\]\:lg\:text-2xl>p{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+.\[\&\>ul\>li\]\:mb-3>ul>li{
+  margin-bottom: 0.75rem;
 }
